--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Third"></activity>
+        <activity android:name=".Third"
+            android:windowSoftInputMode="adjustPan">
+
+        </activity>
         <activity
             android:name=".Second"
             android:label="@string/title_activity_second"
